Actually understanding how splice works...

--- a/ui/src/app/views/invitation-key/component.html
+++ b/ui/src/app/views/invitation-key/component.html
@@ -10,9 +10,11 @@
       <div *ngIf="invitationKeyInvalid" class="alert alert-danger">
         <strong> Invitation Key is not Valid.</strong>
       </div>
-      <button id="next" type="submit" class="btn btn-primary" style="width: 10rem; height: 2rem">
-        Next
-      </button>
+      <div>
+        <button id="next" type="submit" class="btn btn-primary" style="width: 10rem; height: 2rem">
+          Next
+        </button>
+      </div>
     </form>
 
     <!-- 
