--- a/ui/src/app/views/cohort-list/component.html
+++ b/ui/src/app/views/cohort-list/component.html
@@ -39,7 +39,7 @@
               Review
             </button>
             <button class="action-item"
-                    (click)="delete(cohort)">
+                    (click)="deleteCohort(cohort)">
               <clr-icon shape="trash"></clr-icon>
               Delete
             </button>
