--- a/public-ui/src/app/views/pm/pm.component.html
+++ b/public-ui/src/app/views/pm/pm.component.html
@@ -1,3 +1,7 @@
+<h1> Todo Physical Measurements Page </h1>
 <p>
-  physical-measurements works!
+  <a target="_blank" href="https://projects.invisionapp.com/d/main/default/#/console/13577480/306624424/preview" >
+    Link to Mock Up
+  </a>
+
 </p>
