Change test to work with UI

--- a/ui/src/app/views/cohort-list/component.html
+++ b/ui/src/app/views/cohort-list/component.html
@@ -38,7 +38,7 @@
               <clr-icon shape="grid-view"></clr-icon>
               Review
             </button>
-            <button class="action-item"
+            <button class="action-item delete-button"
                     (click)="deleteCohort(cohort)">
               <clr-icon shape="trash"></clr-icon>
               Delete
