Minor css for links

--- a/ui/src/app/views/homepage/component.html
+++ b/ui/src/app/views/homepage/component.html
@@ -81,7 +81,7 @@
                                 </a>
                             </div>
                         </div>
-                        <div class="row">
+                        <div class="row linkGroup">
                             <div class="col">
                                 <a class="links" (click)="listWorkspaces()">See All
                                     Workspaces</a>
