--- a/ui/src/app/views/cohort-list/component.html
+++ b/ui/src/app/views/cohort-list/component.html
@@ -38,6 +38,11 @@
               <clr-icon shape="grid-view"></clr-icon>
               Review
             </button>
+            <button class="action-item delete-button"
+                    (click)="deleteCohort(cohort)">
+              <clr-icon shape="trash"></clr-icon>
+              Delete
+            </button>
           </clr-dropdown-menu>
         </clr-dropdown>
         <div class="name">{{cohort.name}}</div>
