--- a/ui/src/app/views/homepage/component.css
+++ b/ui/src/app/views/homepage/component.css
@@ -1,251 +1,232 @@
-.front-page {
-    margin-left: -1rem;
-    margin-right: -.6rem;
-    text-align: center;
-    position: relative;
-}
-
 .background-image {
-    background-image: url('/assets/images/homepage.png');
+    background-image: url('/assets/images/AoU-HP-background.jpg');
     background-repeat: no-repeat;
-    z-index: -1;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
     background-size: cover;
-    /*height: calc(100vh - 3.3rem);*/
-    height: 41rem;
-}
-
-.rectangle {
-    opacity: .47;
-    background-color: #000000;
-    box-shadow: 0 1px 4px 0 rgba(0,0,0,0.28);
-    position: absolute;
-    margin-top: 5rem;
-    left: 50%;
-    transform: translate(-50%, 0);
-    width: 80%;
-    height: 11rem;
-    z-index: 1;
-}
-
-.invisible_rectangle {
-    margin-top: 5rem;
-    width: 80%;
-    z-index: 2;
-    height: 11rem;
-    position: absolute;
-    left: 50%;
-    transform: translate(-50%, 0);
-}
-
-.tip-title {
-    color: #FFFFFF;
-    padding-top: 1rem;
-    padding-left: 2rem;
-    font-size: 1.8rem;
-    font-weight: 300;
-    line-height: 2rem;
-    position: absolute;
-}
-
-.tip-subtitle {
-    padding-top: 3.7rem;
-    padding-left: 2.1rem;
-    font-size: .9rem;
-    line-height: 1rem;
-}
-
-.tip-description {
-    padding-top: 5rem;
-    font-size: .7rem;
-    line-height: .9rem;
-    font-weight: lighter;
-    text-align: left;
-    width: 55%;
-}
-
-.learn-more-button {
-    display: flex;
-    align-content: center;
-    justify-content: center;
-    flex-direction: column;
-    height: 1.5rem;
-    width: 6.5rem;
-    -webkit-border-radius: .3125rem;
-    -moz-border-radius: .3125rem;
-    border-radius: .3125rem;
-    background-color: #60AEE0;
-    position: absolute;
-    color: #FFFFFF;
-    margin-top: 9rem;
-    margin-left: 2rem;
-    font-weight: 300;
-    font-size: .6rem;
-    cursor: pointer;
-}
-
-.learn-more-button:hover {
-    background-color: #80C3ED;
-}
-.profile-box {
-    height: 11rem;
-    background-color: #FFFFFF;
-    box-shadow: 0 1px 4px 0 rgba(0,0,0,0.28);
-    float: right;
-    position: relative;
-    width: 15rem;
-    z-index: 1;
-    text-align: left;
-}
-
-.profile-title {
-    width: 100%;
-    color: rgba(0, 0, 0, 0.87);
-    line-height: 1rem;
-    font-size: .75rem;
-    font-weight: 300;
-    padding-top: 1.2rem;
-    padding-left: 1.2rem;
-    padding-right: .2rem;
-}
-
-.profile-tips {
-    line-height: .75rem;
-    font-size: .5rem;
-    font-weight: 100;
-    padding-top: 0.2rem;
-    margin-left: 1.2rem;
-    padding-left: 0;
-}
-
-.profile-update-button {
-    height: 1.3rem;
-    width: 5rem;
-    color: #FFFFFF;
-    text-align: center;
-    background-color: #302C71;
-    margin-left: 1.4rem;
-    -webkit-border-radius: .3125rem;
-    -moz-border-radius: .3125rem;
-    border-radius: .3125rem;
-    top: 9rem;
-    padding-top: .1rem;
-    font-size: .6rem;
-    border-style: none;
-    position: absolute;
-    cursor: pointer;
-}
-
-.profile-update-button:hover {
-    background-color: #4356a7;
-}
-
-.pie-chart-box {
-    margin-left: 50%;
-    width: 50%;
-    position: absolute;
-    padding-right: 2%;
     height: 100%;
+}
+
+.double {
+    height: 332px;
+    width: 638px;
+    background-color: rgba(255, 255, 255, 0.15);
+    box-shadow: 0 0 2px 0 rgba(0, 0, 0, 0.12), 0 3px 2px 0 rgba(0, 0, 0, 0.12);
+}
+
+.left {
+    margin-left: 8rem;
+}
+
+.right {
+    margin-left: 0.8rem;
+}
+
+.single {
+    height: 379px;
+    width: 1298px;
+    border-radius: 5px;
+    background-color: rgba(255, 255, 255, 0.15);
+    box-shadow: 0 0 2px 0 rgba(0, 0, 0, 0.12), 0 3px 2px 0 rgba(0, 0, 0, 0.12);
+    margin-left: 8rem;
+}
+
+.analyzeSingleHeader {
+    height: 34px;
+    width: 631px;
+    opacity: 0.87;
+    color: #FFFFFF;
+    font-size: 28px;
+    font-weight: 500;
+    line-height: 34px;
+    margin-top: 2%;
+    margin-left: 3%;
+}
+
+.heading {
+    color: #FFFFFF;
+    font-size: 28px;
+    font-weight: 500;
+    line-height: 34px;
+    margin-top: 3%;
     display: flex;
+    align-items: center;
     justify-content: center;
 }
 
-.percent-text {
-    position: absolute;
-    color: #81BBED;
-    font-size: 1.25rem;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-}
-
-.card-area {
-    display: flex;
-    justify-content: space-between;
-    z-index: 1;
-    text-align: left
-}
-
-.card {
-    width: 45%;
-    height: 10rem;
-    margin-bottom: .8rem;
-    margin-right: 2rem;
-    margin-left: 2rem;
-    padding-left: 1.2rem;
-    padding-top: 1rem;
-    position: relative;
-    -webkit-border-radius: .3125rem;
-    -moz-border-radius: .3125rem;
-    border-radius: .3125rem;
-    border-style: none;
-}
-
-.card *.title {
-    color: #262262;
-    font-size: .8rem;
-    font-weight: 500;
-}
-
-.card *.description {
-    font-size: .6rem;
-    font-weight: 200;
-    padding-top: .5rem;
-    width: 66%;
-}
-
-.card *.button {
-    height: 2rem;
-    width: 8rem;
-    background-color: #302C71;
-    -webkit-border-radius: .3125rem;
-    -moz-border-radius: .3125rem;
-    border-radius: .3125rem;
+.analyzeHeading {
+    opacity: 0.87;
     color: #FFFFFF;
-    top: 6.75rem;
-    position: absolute;
-    text-align: center;
-    vertical-align: middle;
-    border-style: none;
-    cursor: pointer;
-}
-
-.card *.button:active:hover {
-    background: #4356a7;
-}
-
-.card *.button:disabled {
-    cursor: auto;
-}
-
-.bottom-banner {
-    margin-bottom: 0;
-    border-top-color: #5DAEE1;
-    border-style: solid;
-    border-top-width: .3rem;
-    border-bottom-width: 0;
-    border-right-width: 0;
-    border-left-width: 0;
-    width: 100%;
+    font-size: 28px;
+    font-weight: 500;
+    line-height: 34px;
+    width: 65%;
     display: flex;
-    background-color: #483F4B;
-    height: 5rem;
-    position: absolute;
+    text-align: center;
+    margin-left: 18%;
+    margin-top: 1%;
 }
 
-.logo {
-    top: 1rem;
-    left: 3.25rem;
-    height: 3.5rem;
-    width: 7rem;
-    position: relative
+.text {
+    width: 70%;
+    color: #FFFFFF;
+    font-size: 14px;
+    font-weight: 300;
+    line-height: 19px;
+    text-align: center;
+    margin-top: 2%;
+    align-self: center;
+    margin-left: 16%;
 }
 
-.bottom-links {
-    color: #9B9B9B;
-    font-size: .6rem;
-    height: 1rem;
-    left: 2.5rem;
-    top: 2rem;
-    margin-left: 1.5rem;
-    position: relative;
+.double .text {
+    margin-left: 15%;
 }
+
+.button {
+    color: #FFFFFF;
+    font-size: 28px;
+    font-weight: 500;
+    line-height: 34px;
+    text-align: center;
+    align-content: center;
+    width: 541px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    margin-top: 5%;
+    margin-left:2.5rem;
+}
+
+.icon {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.analyzeIcon {
+    height: 18%;
+    width: 18%;
+}
+
+.learnIcon {
+    height: 15%;
+    width: 15%;
+    margin-top: 3%;
+}
+
+.topIcon {
+    height: 65px;
+    width: 94px;
+    margin-top: 8%;
+}
+
+.singleIcon {
+    margin-top: 5%;
+    height: 60px;
+}
+
+.btn-homepage {
+    height: 52px;
+    border-radius: 5px;
+    background-color: #302C71;
+    color: white;
+    margin-left: 31%;
+    margin-top: 3%;
+    font-weight: 500;
+    font-size: 14px;
+}
+
+.footer {
+    height: 300px;
+    width: 100%;
+    border-radius: 5px;
+    background-color: #262262;
+    box-shadow: 0 0 2px 0 rgba(0, 0, 0, 0.12), 0 3px 2px 0 rgba(0, 0, 0, 0.12);
+    margin-top: 3%;
+}
+
+.footerTitle {
+    height: 34px;
+    width: 688.13px;
+    opacity: 0.87;
+    color: #FFFFFF;
+    font-size: 28px;
+    font-weight: 500;
+    line-height: 34px;
+    margin-left: 8.8rem;
+    margin-top: 2%;
+}
+
+.footerSubTitle {
+    align-self: right;
+}
+
+.textGroup {
+    margin-left: 8.8rem;
+}
+
+.footerText {
+    height: 176px;
+    width: 372px;
+    opacity: 0.87;
+    color: #83C3EC;
+    font-size: 16px;
+    font-weight: 300;
+    line-height: 30px;
+}
+
+.footerText .title {
+    color: white;
+    margin-top: 2%;
+}
+
+.linkGroup {
+    margin-top: 1%;
+    margin-left: 9rem;
+}
+
+.links {
+    height: 56px;
+    width: 158px;
+    color: #FFFFFF;
+    font-size: 14px;
+    line-height: 28px;
+    margin-right: 2rem;
+}
+
+.card.add-card {
+    height: 223px;
+    width: 300px;
+    background-color: #FFFFFF;
+    align-content: left;
+    margin-left: 25px;
+}
+
+.card-text {
+    height: 56px;
+    width: 284px;
+    color: #216FB4;
+    font-size: 20px;
+    font-weight: 500;
+    line-height: 28px;
+    margin-top: 20%;
+    margin-left: 6%;
+}
+
+.plus-circle {
+    width: 32px;
+    height: 32px;
+}
+
+.bullets {
+    color: #83C3EC;
+}
+
+.footerLink {
+    margin-left: 53rem;
+    color: #FFFFFF;
+}
+
