RW-966 add new api call for complete tree loads

--- a/ui/src/app/cohort-search/node/node.component.html
+++ b/ui/src/app/cohort-search/node/node.component.html
@@ -4,7 +4,7 @@
     <crit-node-info [node]="node"></crit-node-info>
   </div>
 
-  <ng-template *ngIf="node.get('group')"
+  <ng-template *ngIf="node.get('group') && !fullTree"
     [clrIfExpanded]="expanded"
     (clrIfExpandedChange)="loadChildren($event)">
     <ng-container [clrLoading]="loading">
