--- a/ui/src/app/cohort-search/node/node.component.html
+++ b/ui/src/app/cohort-search/node/node.component.html
@@ -4,8 +4,9 @@
     <crit-node-info [node]="node"></crit-node-info>
   </div>
 
-  <ng-template *ngIf="node.get('group')"
-    [clrIfExpanded]="expanded">
+  <ng-template *ngIf="node.get('group') && !fullTree"
+    [clrIfExpanded]="expanded"
+    (clrIfExpandedChange)="loadChildren($event)">
     <ng-container [clrLoading]="loading">
       <div class="node-list">
         <!-- TODO: This error handling is a stub until we can get a designer to look at it -->
@@ -15,6 +16,21 @@
         </div>
 
         <crit-node *ngFor="let item of children" [node]="item"></crit-node>
+      </div>
+    </ng-container>
+  </ng-template>
+
+  <ng-template *ngIf="node.get('group') && fullTree"
+    [clrIfExpanded]="expanded">
+    <ng-container>
+      <div class="node-list">
+        <!-- TODO: This error handling is a stub until we can get a designer to look at it -->
+        <div *ngIf="error" class="error">
+          <clr-icon shape="error-standard"></clr-icon>
+          <em>Failed to Load Criteria</em>
+        </div>
+
+        <crit-node *ngFor="let item of children.get(node.get('id'))" [node]="item"></crit-node>
       </div>
     </ng-container>
   </ng-template>
