--- a/ui/src/app/cohort-search/search-group-select/search-group-select.component.html
+++ b/ui/src/app/cohort-search/search-group-select/search-group-select.component.html
@@ -16,7 +16,7 @@
           class="dropdown-item"
           type="button"
           [disabled]="criteria.disabled"
-          (click)="launchWizard(criteria.type)"
+          (click)="launchWizard(criteria)"
           clrDropdownItem>{{criteria.name}}</button>
         <div class="dropdown-divider"></div>
         <h4 class="dropdown-header">Domains</h4>
@@ -26,7 +26,7 @@
           class="dropdown-item"
           type="button"
           [disabled]="criteria.disabled"
-          (click)="launchWizard(criteria.type)"
+          (click)="launchWizard(criteria)"
           clrDropdownItem>{{criteria.name}}</button>
       </clr-dropdown-menu>
     </clr-dropdown>
