Revert "adding nonce"
This reverts commit d5972ca6421e131ccf7400ab15e7cbcd0cac006e.

--- a/ui/src/app/views/account-creation-success/component.html
+++ b/ui/src/app/views/account-creation-success/component.html
@@ -22,9 +22,4 @@
     <button class="button-link" (click)="accountCreationModalsComponent.resendInstructions();">Resend Instructions</button> | <button class="button-link" (click)="accountCreationModalsComponent.updateAndSendEmail();">Change contact email</button>
   </div>
 </div>
-<app-account-creation-modals
-        [username]="username"
-        [gsuiteDomain]="gsuiteDomain"
-        [nonceCode] = "nonceCode"
-        (updateEmail)="receiveMessage($event)">
-</app-account-creation-modals>
+<app-account-creation-modals [username]="username" [gsuiteDomain]="gsuiteDomain" (updateEmail)="receiveMessage($event)"></app-account-creation-modals>
