--- a/public-ui/src/app/views/db-header/db-header.component.html
+++ b/public-ui/src/app/views/db-header/db-header.component.html
@@ -7,5 +7,6 @@
     <a class="title nav-link db-logo" routerLink="/"> &nbsp; <img [src]="dbLogo"> &nbsp; </a>
     <a class="nav-link nav-text" #home routerLinkActive="active" routerLink="/quick-search">Quick Guided Search</a>
     <a class="nav-link nav-text" routerLinkActive="active" routerLink="/surveys">Survey Instruments</a>
+    <a class="nav-link nav-text" href="https://redcap.vanderbilt.edu/surveys/?s=JE9H4YE9MW" target="_blank" ><clr-icon shape="pop-out"></clr-icon> Give Feedback</a>
   </div>
 </clr-header>
