--- a/ui/src/app/views/account-creation-modals/component.html
+++ b/ui/src/app/views/account-creation-modals/component.html
@@ -1,4 +1,4 @@
-<div class="change_account_email">
+<div class="change-account-email">
     <clr-modal [(clrModalOpen)]="changingEmail">
         <h3 class="modal-title">Change contact email</h3>
         <div class="modal-body">
@@ -10,7 +10,7 @@
         </div>
         <div class="modal-footer">
             <button type="button" class="btn btn-outline" (click)="changingEmail=false">Cancel</button>
-            <button id="change_email" type="button" class="btn btn-primary" (click)="sendAndUpdate()">Apply</button>
+            <button id="change_email" type="button" class="btn btn-primary" (click)="updateAndSend()">Apply</button>
         </div>
     </clr-modal>
 </div>
