--- a/ui/src/app/cohort-search/search-group/search-group.component.html
+++ b/ui/src/app/cohort-search/search-group/search-group.component.html
@@ -13,7 +13,7 @@
           class="dropdown-item"
           type="button"
           [disabled]="criteria.disabled"
-          (click)="launchWizard(criteria.type)"
+          (click)="launchWizard(criteria)"
           clrDropdownItem>{{criteria.name}}</button>
         <div class="dropdown-divider"></div>
         <h4 class="dropdown-header">Domains</h4>
@@ -22,7 +22,7 @@
           class="dropdown-item"
           type="button"
           [disabled]="criteria.disabled"
-          (click)="launchWizard(criteria.type)"
+          (click)="launchWizard(criteria)"
           clrDropdownItem>{{criteria.name}}</button>
       </clr-dropdown-menu>
     </clr-dropdown>
