--- a/ui/src/app/views/account-creation-modals/component.html
+++ b/ui/src/app/views/account-creation-modals/component.html
@@ -5,12 +5,16 @@
             <div class="form-section">
                 <label>Contact Email:</label>
                 <input id="change-contact-email" type="text" class="input" name="contact-email"
-                       [(ngModel)]="contactEmail">
+                       [(ngModel)]="contactEmail" (blur)="leaveFocusEmail()" (focus)="enterFocusEmail()"
+                       [ngClass]="{'unsuccessfulInput': showEmailValidationError}">
+            </div>
+            <div *ngIf="showEmailValidationError" class="error" id="invalid-email-error">
+                Email is not valid.
             </div>
         </div>
         <div class="modal-footer">
             <button type="button" class="btn btn-outline" (click)="changingEmail=false">Cancel</button>
-            <button id="change_email" type="button" class="btn btn-primary" (click)="updateAndSend()">Apply</button>
+            <button [clrLoading]="waiting" id="change_email" type="button" class="btn btn-primary" (click)="updateAndSend()">Apply</button>
         </div>
     </clr-modal>
 </div>
@@ -19,7 +23,7 @@
         <h3 class="modal-title">Resend Instructions</h3>
         <div class="modal-footer">
             <button type="button" class="btn btn-outline" (click)="resendingEmail=false">Cancel</button>
-            <button id="resend_instructions" type="button" class="btn btn-primary" (click)="send()">Send</button>
+            <button [clrLoading]="waiting" id="resend_instructions" type="button" class="btn btn-primary" (click)="send()">Send</button>
         </div>
     </clr-modal>
 </div>
