--- a/ui/src/app/views/homepage/component.html
+++ b/ui/src/app/views/homepage/component.html
@@ -63,7 +63,7 @@
             <img src='/assets/icons/Analyze.svg' class="iconImage">
           </div>
 
-          <div class="col analyzeSingleHeader">Analyze and Publish With Workspaces</div>
+          <div class="col analyzeSingleHeader">Analyze and Publish with Workspaces</div>
           <div class="col">
             <div class="row linkGroup">
               <div class="col">
@@ -140,7 +140,7 @@
             <li><a href="#" class="bullets">
               Contributing to the Workbench</a></li>
           </ul>
-          <clr-tooltip-content *clrIfOpen>
+          <clr-tooltip-content clrPosition="top-left" clrSize="sm" *clrIfOpen>
             <span>Coming Soon</span>
           </clr-tooltip-content>
         </clr-tooltip>
@@ -159,7 +159,7 @@
             <li><a href="#" class="bullets" data-toggle="tooltip" title="Coming Soon">
               Sharing and Publishing Workspaces</a></li>
           </ul>
-          <clr-tooltip-content *clrIfOpen>
+          <clr-tooltip-content clrPosition="top-left" clrSize="sm" *clrIfOpen>
             <span>Coming Soon</span>
           </clr-tooltip-content>
         </clr-tooltip>
