--- a/ui/src/app/views/homepage/component.html
+++ b/ui/src/app/views/homepage/component.html
@@ -60,7 +60,7 @@
       <div class="card single">
         <div class="row">
           <div class="col">
-            <img src='/assets/icons/Analyze.svg' class="iconImage">
+            <img src='/assets/icons/Analyze.svg' class="singleIcon">
           </div>
 
           <div class="col analyzeSingleHeader">Analyze and Publish with Workspaces</div>
